<resources>
    <string name="app_name">AppleMarket</string>
    <string name="product_detail_chatting_button_text">채팅하기</string>
    <string name="product_detail_manners_text"><u>매너온도</u></string>
    <string name="product_detail_manners_temp">%1$.1f\u2103</string>
    <string name="main_product_price_text">%1$s원</string>
    <string name="product_detail_imageview_desc">상품 이미지</string>
    <string name="main_product_item_img_desc">메인 리사이클뷰 아이템 이미지</string>
    <string name="main_product_chat_img_desc">채팅 이미지</string>
    <string name="main_product_like_img_desc">아이템 하트 이미지</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_toolbar_menu_notification">알림</string>
</resources>