<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="120dp"
    android:orientation="horizontal"
    android:padding="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_img_card"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/main_product_item_img_desc"
            android:src="@drawable/sample1" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="산진 한달된 선풍기 삽니다."
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_locate_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="서울 서대문구 창천동"
            android:textColor="@color/grayText"
            app:layout_constraintLeft_toLeftOf="@id/name_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text" />

        <TextView
            android:id="@+id/product_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/main_product_price_text"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/product_locate_text"
            app:layout_constraintTop_toBottomOf="@id/product_locate_text" />

        <ImageView
            android:id="@+id/chat_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_product_chat_img_desc"
            android:src="@drawable/ic_forum"
            app:layout_constraintBottom_toBottomOf="@id/chat_count_text"
            app:layout_constraintEnd_toStartOf="@id/chat_count_text"
            app:layout_constraintRight_toLeftOf="@id/like_img"
            app:layout_constraintTop_toTopOf="@id/chat_count_text" />

        <TextView
            android:id="@+id/chat_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="25"
            app:layout_constraintBottom_toBottomOf="@id/like_img"
            app:layout_constraintRight_toLeftOf="@id/like_img"
            app:layout_constraintTop_toTopOf="@id/like_img" />

        <ImageView
            android:id="@+id/like_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_product_like_img_desc"
            android:src="@drawable/ic_favorite_border"
            app:layout_constraintBottom_toBottomOf="@id/like_count_text"
            app:layout_constraintEnd_toStartOf="@id/like_count_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/like_count_text" />

        <TextView
            android:id="@+id/like_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13"
            app:layout_constraintTop_toBottomOf="@id/product_price_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>